# gaps_tdi

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: compare_TDI_timeseries_missing_data.ipynb  investigation_gap_widening.ipynb  investigation_gap_widening_static.ipynb  investigation_gap_widening_time_varying_arms.ipynb  pipeline_w_gaps.ipynb  research_pipeline_w_gaps.ipynb  results_full_LISA_dataset.ipynb
notebooks/data/data_for_large_LISA_like_simulations/: statistics_small_dt.pkl
notebooks/full_LISA_simulations/: results_full_LISA_dataset.ipynb
notebooks/static_constellation/: compare_TDI_timeseries_missing_data.ipynb  investigation_gap_widening_static.ipynb
notebooks/time_varying_explore/: investigation_gap_widening_time_varying_arms.ipynb
utility_funcs/: gap_widening_utils.py  multi_gap_utils.py
