[project]
name = "gaps-tdi"
version = "0.1.0"
description = "Project to understand gap augmentation due to TDI computations"
authors = [
    {name = "Ollie Burke", email = "ollie.burke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.6.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pytdi==2.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
    "lisainstrument>=1.9.0",
    "lisaorbits>=2.4.2",
    "lisaglitch",
]

[tool.uv.sources]
lisaglitch = { git = "https://gitlab.in2p3.fr/lisa-simulation/glitch.git", branch = "69-incorporate-gaps" }
